[package]
name = "sleepycat"
description = "Slow down your data"
version = "0.1.4"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
repository = "https://github.com/daniellockyer/sleepycat"
homepage = "https://github.com/daniellockyer/sleepycat"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "~2.33"
default-features = false
